# qiskit_quicscript_translator

./: LICENSE  README.md  pyproject.toml  requirements.txt
examples/: test.ipynb
examples/QFT/: qiskit_QFT_quicscript.ipynb  quicscript_qft.txt  requirements.txt
src/qiskit_quicscript_translator/: QuiCGate.py  Translator.py  __about__.py  __init__.py
tests/: __init__.py
